# pf1_spell_search

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  hashfiles.py  index.html  manifest.json  pf1_spell_search-10769b3f.js  pf1_spell_search-f01d46f5.js  pf1_spell_search.js  spell-build.rs  sw.js
.github/: FUNDING.yml
.github/workflows/: pages.yml  rust.yml
libs/filter_derive/: Cargo.toml
libs/filter_derive/src/: lib.rs
libs/filter_repr/: Cargo.toml
libs/filter_repr/src/: lib.rs
libs/html_to_struct/: Cargo.toml
libs/html_to_struct/src/: lib.rs
src/: app.rs  filters.rs  lib.rs  main.rs  spell.rs  toggle.rs  util.rs
