[package]
name = "pf1_spell_search"
version = "0.1.3"
authors = ["Felix Roithmayr <felix.roithmayr@aon.at>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.31.1"
egui_extras = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
log = "0.4.26"
csv = "1.3.1"
# You only need serde if you want app persistence:
serde = { version = "1.0.219", features = ["derive"] }
egui_commonmark = { version = "0.20.0", features = ["macros"] }
filter_repr = { path = "libs/filter_repr" }
filter_derive = { path = "libs/filter_derive" }
lazy_static = "1.5.0"
regex = "1.11.1"

[build-dependencies]
egui = "0.31.1"
csv = "1.3.1"
html2md = "0.2.15"
serde = { version = "1.0.219", features = ["derive"] }
filter_repr = { path = "libs/filter_repr" }
filter_derive = { path = "libs/filter_derive" }
convert_case = "0.8.0"
lazy_static = "1.5.0"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.7"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"              # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
